--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!-- Mirrored from snow344.neocities.org/test/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 11 Oct 2020 18:22:36 GMT -->
 <head>
 <title>Test Page</title>
 <meta charset="utf-8">
@@ -10,13 +8,11 @@
 <body>
 <marquee>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at lacinia tellus. Nullam rhoncus, sem at eleifend interdum, tellus mauris viverra felis, sed imperdiet elit quam accumsan dolor. Phasellus tincidunt suscipit est, vitae imperdiet neque. Aenean porttitor lectus at lacus tempus, vel ornare augue venenatis. Donec blandit nibh quis justo rhoncus, sed feugiat lorem sodales. Nunc sagittis semper nisl et cursus. Pellentesque rutrum turpis eget risus dapibus vehicula. In hac habitasse platea dictumst. Curabitur efficitur facilisis metus vel malesuada. Vestibulum luctus eros vel porttitor interdum. Sed sed lacinia nisi.
 </marquee>
-<video autoplay loop muted id="video"><source src="https://files.catbox.moe/bbmqvl.webm" type="video/webm"></video>
+<video autoplay loop muted id="video"><source src="bg_vid.webm" type="video/webm"></video>
 <div id="center">
 <a href="https://example.com/" target=_blank><pre>this is a test page</pre></a>
-<div><pre><p align="middle">[ <a href="https://example.com/">discord</a> ]</pre></div>
-<audio autoplay loop><source src="https://files.catbox.moe/mssi9p.mp3" type="audio/mpeg"></audio>
+<div><pre><p align="middle">[ <a href="/">discord</a> ]</pre></div>
+<audio autoplay loop><source src="bg_audio.mp3" type="audio/mpeg"></audio>
 </div>
 </body>
-
-<!-- Mirrored from snow344.neocities.org/test/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 11 Oct 2020 18:22:36 GMT -->
 </html>
