--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,9 @@
 </marquee>
 <video autoplay loop muted id="video"><source src="bg_vid.webm" type="video/webm"></video>
 <div id="center">
-<a href="https://example.com/" target=_blank><pre>this is a test page</pre></a>
+<a href="/" target=_blank><pre>this is a test page</pre></a>
 <div><pre><p align="middle">[ <a href="/">discord</a> ]</pre></div>
-<audio autoplay loop><source src="bg_audio.mp3" type="audio/mpeg"></audio>
+<audio autoplay loop><source src="bg_audio.ogg" type="audio/ogg"></audio>
 </div>
 </body>
 </html>
