--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 <div id="center">
 <a href="/" target=_blank><pre>this is a test page</pre></a>
 <div><pre><p align="middle">[ <a href="/">discord</a> ]</pre></div>
-<audio autoplay loop><source src="bg_audio.ogg" type="audio/webm"></audio>
+<audio autoplay loop><source src="bg_audio.webm" type="audio/webm"></audio>
 </div>
 </body>
 </html>
