--- a/maid/index.html
+++ b/maid/index.html
@@ -140,9 +140,9 @@ They come in two sizes- 1024 by 768, and 1280 by 1024- so choose wisely.<br><br>
 <center>
 
 
-And the fun hasn't stopped yet, friends- <a href="TheMaidClothesAndMachineGunGuide.html">here's a full guide</a> to the game.<br><br>
+And the fun hasn't stopped yet, friends- <a href="guide">here's a full guide</a> to the game.<br><br>
 
-Additionally, we've also covered <a href="TheMaidClothesAndMachineGunCompleteWorks.html">the official artbook for the game</a>.<br><br>
+Additionally, we've also covered <a href="artbook">the official artbook for the game</a>.<br><br>
 
 I'm sure <i>someone</i> will find this useful.<br><br>
 <b><center><a href="index.html">Will we ever review anything more bizarre than this game? It is a mystery...</a></b><br><br>
