--- a/gaminghell/maid/artbook/index.html
+++ b/gaminghell/maid/artbook/index.html
@@ -65,7 +65,7 @@ In any case, this book is a pretty interesting glimpse into the work that goes i
 <center>
 And yes, we are aware of the pointlessness of buying a book in a language we can't read.<br><br>
 
-Still, we reckon it's at least a rung above <s>playing RPGs untranslated and pretending to understand them</s> <a href="PuyoPuyoBox.html">HA HA NEVER MIND</A><br><br></center>
+Still, we reckon it's at least a rung above <s>playing RPGs untranslated and pretending to understand them</s> <a href="../../puyopuyobox">HA HA NEVER MIND</A><br><br></center>
 
 <font size="3">
 <center>
