--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!-- Mirrored from snow344.neocities.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 11 Oct 2020 18:21:56 GMT -->
 <head>
 <title>snow344</title>
 <meta charset="utf-8">
@@ -10,11 +8,11 @@ html, body {
 min-height: 100%
 }
 body {
-background-image: url("denji.png");
+background-image: url("bg.png");
 background-repeat: no-repeat;
 background-position: right bottom;
-background-size: 250px;
-background-color: #33006F;
+background-size: 380px;
+background-color: #0078D7;
 font-family: monospace;
 line-height: 1.35;
 margin-left: 17px;
@@ -22,7 +20,6 @@ font-size: 16px;
 }
 div {
 line-height: 1.55;
-border: 2.5px solid #00FF00;
 padding: 5px;
 position: absolute;
 text-align: justify;
@@ -50,7 +47,7 @@ hello;<br>
 I dump stuff on here once in a while;<br>
 feel free to check anything you are interessed on out;<br>
 have fun;</div>
-<span style="color:#00FF00">>manuals</span><br>
+<span style="color:#FF006E">>manuals</span><br>
 <a href="manuals/ricochet/ricochetstart.html">ricochet</a><br>
 <a href="manuals/cstrike/index.html">cstrike</a><br>
 <a href="manuals/tfc/TFCstarting.html">tfc</a><br>
@@ -61,11 +58,9 @@ have fun;</div>
 <a href="manuals/cavestory/index.html">cavestory</a><br>
 <a href="manuals/ever17/index.html">ever17</a><br>
 <a href="manuals/remember11/index_en.html">remember11</a><br><br>
-<span style="color:#00FF00">>misc</span><br>
+<span style="color:#FF006E">>misc</span><br>
 <a href="infinity_plus/index.html">infinity plus</a><br>
 <a href=gnu/index.html>gnu</a><br>
 <a href=test/index.html>test</a>
 </body>
-
-<!-- Mirrored from snow344.neocities.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 11 Oct 2020 18:22:01 GMT -->
 </html>
