--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <title>snow344</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
 <style>
 html, body {
-min-height: 100%
+min-height: 100%;
 }
 body {
+font-family: 'Roboto', sans-serif;
 background-image: url("bg.png");
 background-repeat: no-repeat;
 background-position: right bottom;
 background-size: 380px;
 background-color: #0078D7;
-font-family: monospace;
 line-height: 1.35;
-margin-left: 17px;
-font-size: 16px;
+margin: 16px;
+font-size: 17.5px;
 }
 div {
+word-spacing: 3.5px;
 line-height: 1.55;
 padding: 5px;
 position: absolute;
@@ -47,20 +50,22 @@ hello;<br>
 I dump stuff on here once in a while;<br>
 feel free to check anything you are interessed on out;<br>
 have fun;</div>
-<span style="color:#FF006E">>manuals</span><br>
+>manuals<br>
 <a href="manuals/ricochet/ricochetstart.html">ricochet</a><br>
-<a href="manuals/cstrike/index.html">cstrike</a><br>
+<a href="manuals/cstrike">cstrike</a><br>
 <a href="manuals/tfc/TFCstarting.html">tfc</a><br>
 <a href="manuals/previews/previews.html">previews</a><br>
 <a href="manuals/alice/manual.html">alice</a><br>
 <a href="manuals/doom3/manual.html">doom3</a><br>
-<a href="manuals/subterra/index.html">subterra</a><br>
-<a href="manuals/cavestory/index.html">cavestory</a><br>
-<a href="manuals/ever17/index.html">ever17</a><br>
+<a href="manuals/subterra">subterra</a><br>
+<a href="manuals/cavestory">cavestory</a><br>
+<a href="manuals/ever17">ever17</a><br>
 <a href="manuals/remember11/index_en.html">remember11</a><br><br>
-<span style="color:#FF006E">>misc</span><br>
-<a href="infinity_plus/index.html">infinity plus</a><br>
-<a href=gnu/index.html>gnu</a><br>
-<a href=test/index.html>test</a>
+>misc<br>
+<a href="infinity_plus">infinity plus</a><br>
+<a href="e17he">e17he</a><br>
+<a href=gnu>gnu</a><br>
+<a href=test>test</a><br>
+<a href=id>id</a>
 </body>
 </html>
